# AniTracker-MCP

./: .env  expenses.db  main.py  pyproject.toml
